Sonar findings
RISDEV-0000